syntax="proto3";
package protos;


//服务器数据 仅上线时同步一次 TODO转到login
message Server {
	int64 time = 3; 		//服务器时间
	int32 appid = 4; 		//游戏ID
	int32 region = 5; 		//游戏服ID
	string chatUrl = 6; 	//聊天服地址
	string version = 7; 	//后端版本标识
}

//91 登陆
message Login_C {
	int32 protoId = 1;//[default = 91];		//
	string openId = 2; //平台OPENID
	int64 uid = 3;		//DEV开发调试直接用UID
	string version = 4; //前端版本号
	string deviceId = 5; //前端设备ID
	string serverName = 6;//？
}

//92 登陆
message Login_S {
	int32 protoId = 1;//[default = 92];		//
	int64 uid = 2;		//my uid
}

//93 获得角色信息
message GetRoleInfo_C {
	int32 protoId = 1;//[default = 93];		//
}

//94 获得角色信息
message GetRoleInfo_S {
	int32 protoId = 1;//[default = 94];		//
	int64 uid = 2;		//my uid
	Server server = 3;		//服务器数据 TODO
}


